@@ -288,3 +288,4 @@ Fixes:
     * Fix srv->start_time (initialization missing). So now
       ecore_con_server_uptime_get() is working for plain TCP connections.
     * Fix textblock to render pre again if it needs to relayouting.
+    * Fix edje min size calc to calc sub GROUP parts too.
